# slack-RL-env

./: .gitignore  API_DOCUMENTATION.md  AUTH_INTEGRATION.md  DOCKER_COMPLETE.md  DOCKER_IMPLEMENTATION.md  DOCKER_QUICK_START.md  DOCKER_SETUP.md  GOOGLE_OAUTH_IMPLEMENTATION.md  GOOGLE_OAUTH_SETUP.md  QUICK_START.md  README.md  WORKSPACE_ISOLATION_FIX.md  app.py  check_models.py  check_models_httpx.py  docker-compose.yml  package-lock.json  script.py  start-docker.ps1  start-docker.sh  test_megallm_api.py  threads_transformed.jsonl  user_id_map.csv  users_transformed.jsonl
backend/: .dockerignore  .env.example  C07GJFVLYKS_messages.json  (+8 more)
rl/: .gitignore  QUICKSTART.md  QUICKSTART_GLM46.md  README.md  RICH_FEATURES.md  TEST_RESULTS.md  __init__.py  pyproject.toml  requirements.txt
rl/agents/: __init__.py  glm46_agent.py  megallm_client.py
rl/config/: __init__.py  settings.py
rl/data/: __init__.py  api_client.py  planner.py  rich_content.py  specs.py  synthetic_population.py
rl/docs/: IMPLEMENTATION.md  README.md  architecture.md  data.md  environment.md  evaluation.md
rl/env/: __init__.py  actions.py  observation.py  playwright_controller.py  rewards.py  slack_ui_env.py
rl/evals/: __init__.py
rl/examples/: simple_demo.py  test_glm46_navigation.py
rl/scripts/: __init__.py  bootstrap_workspace.py  register_agent.py  run_env.py  show_synthetic_workspace.py  visualize_workspace.py
rl/slack_ui_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rl/tasks/: __init__.py  navigation_tasks.py  specs.py
rl/tests/: __init__.py  test_actions.py  test_planner.py
(+305 files in other folders)
